[gd_scene load_steps=17 format=2]

[ext_resource path="res://SfondoLivello2.png" type="Texture" id=1]
[ext_resource path="res://CruciverbaOK.png" type="Texture" id=2]
[ext_resource path="res://DefinizioniOK.png" type="Texture" id=3]
[ext_resource path="res://Livello4(OLD).gd" type="Script" id=4]
[ext_resource path="res://Top_Menu_Bar_Style.tres" type="DynamicFont" id=5]
[ext_resource path="res://0 - main menu/moneta.png" type="Texture" id=6]
[ext_resource path="res://0 - main menu/cuore.png" type="Texture" id=7]
[ext_resource path="res://0 - main menu/top_menu_bar.png" type="Texture" id=8]
[ext_resource path="res://1 - gioco cestino/icona_esci.png" type="Texture" id=9]
[ext_resource path="res://1 - gioco cestino/icona_pausa.png" type="Texture" id=10]
[ext_resource path="res://GameInfo.gd" type="Script" id=16]
[ext_resource path="res://Open 24 Display St.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://04B_30__.TTF" type="DynamicFontData" id=18]
[ext_resource path="res://Forziere.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 17 )

[node name="Livello4" type="Node2D"]
script = ExtResource( 4 )

[node name="Sfondo" type="Sprite" parent="."]
position = Vector2( 878.526, 492.827 )
scale = Vector2( 0.748038, 0.515268 )
texture = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
margin_left = 299.359
margin_top = 154.725
margin_right = 339.359
margin_bottom = 194.725
custom_colors/background_color = Color( 0.968627, 0.937255, 0.937255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
margin_left = 299.0
margin_top = 225.0
margin_right = 357.0
margin_bottom = 277.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cruciverba" type="Sprite" parent="."]
position = Vector2( 728.514, 428.916 )
scale = Vector2( 1.69951, 1.36806 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1408.4, 587.96 )
texture = ExtResource( 3 )

[node name="Pause" type="Button" parent="."]
visible = false
margin_left = 1532.29
margin_top = 122.041
margin_right = 1605.29
margin_bottom = 162.041
text = "PAUSA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
visible = false
margin_left = 1452.25
margin_top = 121.796
margin_right = 1522.25
margin_bottom = 161.796
text = "ESCI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Punti" type="Label" parent="."]
margin_left = 1469.46
margin_top = 46.1542
margin_right = 1507.46
margin_bottom = 99.1542
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.552941, 0.435294, 0.0235294, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forziere" type="Sprite" parent="."]
position = Vector2( 1580.52, 65.278 )
scale = Vector2( 0.123, 0.103 )
texture = ExtResource( 19 )

[node name="Tempo" type="Label" parent="."]
visible = false
margin_left = 32.5563
margin_top = 5.27208
margin_right = 274.556
margin_bottom = 68.2721
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alert" type="AcceptDialog" parent="."]
visible = true
margin_left = -417.38
margin_top = 187.977
margin_right = -46.38
margin_bottom = 335.977
window_title = "Attenzione!"
dialog_text = "ATTENZIONE !!!

Uscendo perderai tutti i progressi di gioco, continuare ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameInfo" type="AcceptDialog" parent="."]
visible = true
margin_left = 307.0
margin_top = 164.0
margin_right = 716.0
margin_bottom = 406.0
window_title = "Informazioni sul gioco"
dialog_text = "Aiuta Scarperentola a risolvere il cruciverba.
Le definizioni sono riporate a fianco, ricorda che le parole
devono intrecciarsi correttamente. 

BUONA FORTUNA !!!"
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top_Menu_Bar" type="Sprite" parent="."]
position = Vector2( 532.576, 54.1766 )
scale = Vector2( 0.550775, 0.6 )
texture = ExtResource( 8 )

[node name="Tempo2" type="Label" parent="."]
margin_left = 353.329
margin_top = 32.3413
margin_right = 487.329
margin_bottom = 72.3413
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
text = "15 : 20 : 53"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vita1" type="Sprite" parent="."]
position = Vector2( 568.329, 50.2819 )
texture = ExtResource( 7 )

[node name="Vite" type="Label" parent="."]
margin_left = 598.329
margin_top = 28.4008
margin_right = 611.329
margin_bottom = 63.4008
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.921569, 0.0313726, 0.0313726, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moneta" type="Sprite" parent="."]
position = Vector2( 661.661, 50.3968 )
texture = ExtResource( 6 )

[node name="Monete" type="Label" parent="."]
margin_left = 691.329
margin_top = 27.3413
margin_right = 704.329
margin_bottom = 62.3413
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.627451, 0.619608, 0.0509804, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit2" type="Button" parent="."]
margin_left = 792.079
margin_top = 27.9206
margin_right = 900.079
margin_bottom = 82.9206
toggle_mode = true
icon = ExtResource( 9 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause2" type="Button" parent="."]
margin_left = 165.538
margin_top = 27.1409
margin_right = 273.538
margin_bottom = 82.1409
toggle_mode = true
icon = ExtResource( 10 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="confirmed" from="Alert" to="." method="_on_Alert_confirmed"]
[connection signal="confirmed" from="GameInfo" to="." method="_on_GameInfo_confirmed"]
